fixed sizing overlap on resume page

--- a/src/index.css
+++ b/src/index.css
@@ -223,7 +223,7 @@ img .profile-pic {
 
 .resume-cont {
   justify-content: center;
-  margin: 0px -48px !important
+  /* margin: 0px -48px !important */
 }
 
 .resume-info {
